[project]
name = "github-contribution-graph-writer"
version = "0.1.0"
description = "streamlit github contribution graph"
authors = [
    {name = "Justin Evans"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.3.0,<5.0.0)",
    "ruff (>=0.14.4,<0.15.0)"
]
