[project]
name = "github-contributions"
version = "0.1.0"
description = "interactive"
authors = [
    {name = "justinj-evans",email = "11je20@queensu.ca"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.51.0,<2.0.0)",
    "matplotlib>=3.10.7,<4.0.0",
    "dotenv>=0.9.9",
]

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
